--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Wealthy Living - Premium Healthcare services with expert care. Book an appointment today!"
+    />
     <title>WEALTHY LIVING | HOME</title>
     <link
       rel="stylesheet"
@@ -25,12 +29,20 @@
       href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Navbar Section -->
     <header class="fixed-top">
       <div class="logo">
-        <img src="/assets/images/feem-logo.png" alt="feem Logo" />
+        <img
+          src="/assets/images/wealthy health care logo.png"
+          alt="wealthy living Logo"
+        />
       </div>
       <ul class="navlist">
         <li>
@@ -42,16 +54,14 @@
           >
         </li>
         <li>
-          <a href="/pages/what.html" style="--i: 3" class="nav-link"
-            >Blog</a
-          >
+          <a href="/pages/what.html" style="--i: 3" class="nav-link">Blog</a>
         </li>
         <li>
           <a href="/pages/ResearchResource.html" style="--i: 4" class="nav-link"
             >Career</a
           >
         </li>
-        </li>
+
         <li>
           <a href="/pages/ResearchResource.html" style="--i: 5" class="nav-link"
             >Contact</a
@@ -79,12 +89,28 @@
 
     <!-- Hero Section--------------- -->
     <section
-      class="home-section"
+      class="home-section d-flex justify-content-center align-items-center"
       data-aos="fade-down"
       data-aos-easing="ease-in-sine"
       data-aos-duration="1000"
       id="home"
-    ></section>
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 my-5">
+            <p class="welcome-text">Welcome to</p>
+            <h1><span class="text-orange">Wealthy</span> Living</h1>
+            <h1>Health<span class="text-green">care</span> Service</h1>
+            <p class="description">
+              We provide top-tier healthcare services to ensure your well-being.
+              Our expert team is dedicated to offering exceptional care tailored
+              to your needs.
+            </p>
+            <a href="#" class="btn book-btn">Book Appointment</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
