know us section done

--- a/index.html
+++ b/index.html
@@ -112,6 +112,67 @@
       </div>
     </section>
 
+    <!-- Know Us Section----------- -->
+    <section class="knows-us-section py-3">
+      <div class="container">
+        <!-- Section Title -->
+        <div class="section-title d-flex align-items-center">
+          <div class="line"></div>
+          <i class="fas fa-arrow-right"></i>
+          <h2 class="mt-2">Know About Us</h2>
+        </div>
+
+        <!-- First Row: Image Left, Text Right -->
+        <div class="row align-items-center mb-4">
+          <div class="col-lg-5">
+            <img
+              src="/assets/images/nurse talking.png"
+              alt="About Us Image"
+              class="img-fluid know-us"
+            />
+          </div>
+          <div class="col-lg-7 mt-3">
+            <h3 class="about">About Us</h3>
+            <p class="">
+              At Wealthy Living, your health and well-being are our top
+              priorities.
+            </p>
+            <p class="">
+              We are committed to providing compassionate, personalized care
+              that empowers you to lead a healthier and happier life.
+            </p>
+            <p class="">
+              Explore our comprehensive range of healthcare services designed to
+              meet your unique needs.
+            </p>
+            <p class="">
+              Whether you're here to schedule an appointment, learn about our
+              wellness programs, or simply seek advice, we are here to support
+              you every step of the way.
+            </p>
+          </div>
+        </div>
+
+        <!-- Second Row: Text Left, Image Right -->
+        <div class="row align-items-center flex-column-reverse flex-lg-row">
+          <div class="col-lg-5 mt-3">
+            <p class="">
+              - Your journey to better your health starts here. <br />
+              Let's achieve your wellness goals together!
+            </p>
+            <p class="">
+              - Feel free to reach out to our team if you have any quesions.
+              <br />
+              Thank you for choosing Wealthy Living Healthcare Services!
+            </p>
+          </div>
+          <div class="col-lg-7">
+            <img src="/assets/images/blacky.png" alt="Our Values Image" class="img-fluid know-us" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
