our services section done

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
 
         <!-- First Row: Image Left, Text Right -->
-        <div class="row align-items-center mb-4">
+        <div class="row align-items-center mb-3">
           <div class="col-lg-5">
             <img
               src="/assets/images/nurse talking.png"
@@ -167,8 +167,110 @@
             </p>
           </div>
           <div class="col-lg-7">
-            <img src="/assets/images/blacky.png" alt="Our Values Image" class="img-fluid know-us" />
+            <img
+              src="/assets/images/blacky.png"
+              alt="Our Values Image"
+              class="img-fluid know-us"
+            />
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Our Services --------- -->
+    <section class="our-services-section py-3">
+      <div class="container">
+        <!-- Section Title Row -->
+        <div class="row align-items-center section-header">
+          <div class="col-lg-4 d-flex align-items-center">
+            <div class="line"></div>
+            <i class="fas fa-arrow-right"></i>
+            <h2 class="mt-2">What We Do</h2>
+          </div>
+          <div class="col-lg-8 text-center text-lg-start mt-2">
+            <h1>Our Services</h1>
+            <h4>What We Offer To Our Clients</h4>
+          </div>
+        </div>
+
+        <!-- Services Grid -->
+        <div class="row g-4 mt-4">
+          <!-- Service Item 1 -->
+          <div class="col-md-6">
+            <div class="service-item position-relative">
+              <img
+                src="/assets/images/service1.png"
+                alt="Service 1"
+                class="img-fluid service-img"
+              />
+              <div class="service-card">
+                <h3>Primary Healthcare</h3>
+                <p>
+                  Comprehensive healthcare services for all ages with expert
+                  medical professionals.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Service Item 2 -->
+          <div class="col-md-6">
+            <div class="service-item position-relative">
+              <img
+                src="/assets/images/service2.png"
+                alt="Service 2"
+                class="img-fluid service-img"
+              />
+              <div class="service-card">
+                <h3>Specialist Care</h3>
+                <p>
+                  Advanced medical care with specialized treatments tailored to
+                  your needs.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Service Item 3 -->
+          <div class="col-md-6">
+            <div class="service-item position-relative">
+              <img
+                src="/assets/images/service3.png"
+                alt="Service 3"
+                class="img-fluid service-img"
+              />
+              <div class="service-card">
+                <h3>Emergency Services</h3>
+                <p>
+                  Immediate medical attention with round-the-clock emergency
+                  response.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Service Item 4 -->
+          <div class="col-md-6">
+            <div class="service-item position-relative">
+              <img
+                src="/assets/images/service4.png"
+                alt="Service 4"
+                class="img-fluid service-img"
+              />
+              <div class="service-card">
+                <h3>Telemedicine</h3>
+                <p>
+                  Virtual healthcare consultations from the comfort of your
+                  home.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Learn More Link -->
+        <div class="text-center mt-4">
+          <a href="#" class="learn-more btn">Learn More</a>
         </div>
       </div>
     </section>
