speciality section done

--- a/index.html
+++ b/index.html
@@ -275,6 +275,87 @@
       </div>
     </section>
 
+    <!-- Our Speciality Section----- -->
+    <section class="speciality-section py-4">
+      <div class="container-fluid">
+        <div class="row no-gutters">
+          <!-- Left Side (Text + Overlay) -->
+          <div class="col-lg-6 speciality-left">
+            <div class="overlay"></div>
+            <div class="content">
+              <div class="speciality-text">
+                <h2>Our Speciality</h2>
+                <p>
+                  We provide top-quality healthcare services with highly
+                  experienced professionals and state-of-the-art facilities.
+                </p>
+              </div>
+              <div class="row speciality-items">
+                <div class="col-lg-6 col-md-6 col-sm-12 speciality-item">
+                  <div class="icon-circle">
+                    <i class="bx bx-medal"></i>
+                  </div>
+                  <div class="speciality-text">
+                    <h3>High Ratings</h3>
+                    <p>
+                      Our patients trust us with an excellent satisfaction rate.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-12 speciality-item">
+                  <div class="icon-circle">
+                    <i class="fas fa-user-md"></i>
+                  </div>
+                  <div class="speciality-text">
+                    <h3>Professional Staff</h3>
+                    <p>
+                      We have a dedicated team of certified healthcare
+                      professionals.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-12 speciality-item">
+                  <div class="icon-circle">
+                    <i class="fas fa-user-nurse"></i>
+                  </div>
+                  <div class="speciality-text">
+                    <h3>Experienced Doctors</h3>
+                    <p>
+                      Our doctors are highly experienced with years of
+                      expertise.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-12 speciality-item">
+                  <div class="icon-circle">
+                    <i class="fas fa-ambulance"></i>
+                  </div>
+                  <div class="speciality-text">
+                    <h3>Emergency Care</h3>
+                    <p>
+                      24/7 emergency services to handle critical cases
+                      efficiently.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Right Side (Image) -->
+          <div class="col-lg-6 speciality-right">
+            <img
+              src="/assets/images/special-doctors.png"
+              alt="Healthcare Professionals"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
