testimonials section done

--- a/index.html
+++ b/index.html
@@ -356,6 +356,87 @@
       </div>
     </section>
 
+    <!-- Testimonials Section---- -->
+    <section class="testimonials-section">
+      <div class="container">
+        <!-- Section Title -->
+        <div class="text-center mb-5">
+          <h2 class="">Customer Testimonials</h2>
+          <h4 class="section-subtitle">What Our Clients Say About Us</h4>
+        </div>
+
+        <!-- Testimonials Grid -->
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="testimonial-item">
+              <div class="stars">★★★★★</div>
+              <p class="testimonial-text">
+                "Amazing service! The doctors and staff were so caring and
+                professional."
+              </p>
+              <div class="testimonial-footer">
+                <img src="/assets/images/profile1.png" alt="Client" class="profile-img" />
+                <div>
+                  <h5>John Doe</h5>
+                  <p>General Checkup</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="testimonial-item">
+              <div class="stars">★★★★★</div>
+              <p class="testimonial-text">
+                "The best healthcare experience I've ever had. Highly
+                recommend!"
+              </p>
+              <div class="testimonial-footer">
+                <img src="/assets/images/profile2.png" alt="Client" class="profile-img" />
+                <div>
+                  <h5>Jane Smith</h5>
+                  <p>Dental Care</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="testimonial-item">
+              <div class="stars">★★★★★</div>
+              <p class="testimonial-text">
+                "Professional, friendly, and efficient. I felt well taken care
+                of."
+              </p>
+              <div class="testimonial-footer">
+                <img src="/assets/images/profile1.png" alt="Client" class="profile-img" />
+                <div>
+                  <h5>Michael Lee</h5>
+                  <p>Emergency Care</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="testimonial-item">
+              <div class="stars">★★★★★</div>
+              <p class="testimonial-text">
+                "Top-notch service with a warm and welcoming atmosphere."
+              </p>
+              <div class="testimonial-footer">
+                <img src="/assets/images/profile2.png" alt="Client" class="profile-img" />
+                <div>
+                  <h5>Sarah Johnson</h5>
+                  <p>Pediatrics</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
