mission-vision section done

--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
     </section>
 
     <!-- Testimonials Section---- -->
-    <section class="testimonials-section">
+    <section class="testimonials-section p-3">
       <div class="container">
         <!-- Section Title -->
         <div class="text-center mb-5">
-          <h2 class="">Customer Testimonials</h2>
+          <h2 class="">Testimonials</h2>
           <h4 class="section-subtitle">What Our Clients Say About Us</h4>
         </div>
 
@@ -375,7 +375,11 @@
                 professional."
               </p>
               <div class="testimonial-footer">
-                <img src="/assets/images/profile1.png" alt="Client" class="profile-img" />
+                <img
+                  src="/assets/images/profile1.png"
+                  alt="Client"
+                  class="profile-img"
+                />
                 <div>
                   <h5>John Doe</h5>
                   <p>General Checkup</p>
@@ -392,7 +396,11 @@
                 recommend!"
               </p>
               <div class="testimonial-footer">
-                <img src="/assets/images/profile2.png" alt="Client" class="profile-img" />
+                <img
+                  src="/assets/images/profile2.png"
+                  alt="Client"
+                  class="profile-img"
+                />
                 <div>
                   <h5>Jane Smith</h5>
                   <p>Dental Care</p>
@@ -409,7 +417,11 @@
                 of."
               </p>
               <div class="testimonial-footer">
-                <img src="/assets/images/profile1.png" alt="Client" class="profile-img" />
+                <img
+                  src="/assets/images/profile1.png"
+                  alt="Client"
+                  class="profile-img"
+                />
                 <div>
                   <h5>Michael Lee</h5>
                   <p>Emergency Care</p>
@@ -425,13 +437,108 @@
                 "Top-notch service with a warm and welcoming atmosphere."
               </p>
               <div class="testimonial-footer">
-                <img src="/assets/images/profile2.png" alt="Client" class="profile-img" />
+                <img
+                  src="/assets/images/profile2.png"
+                  alt="Client"
+                  class="profile-img"
+                />
                 <div>
                   <h5>Sarah Johnson</h5>
                   <p>Pediatrics</p>
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Mission and vision Section------- -->
+    <section class="mission-vision-section p-3">
+      <div class="container">
+        <!-- Section Title Row -->
+        <div class="row align-items-center section-header">
+          <div class="col-lg-4 d-flex align-items-center">
+            <div class="line"></div>
+            <i class="fas fa-arrow-right"></i>
+            <h2 class="mt-2">What We Do</h2>
+          </div>
+          <div class="col-lg-8 text-center text-lg-start mt-2">
+            <h1>Our Services</h1>
+            <h4>What We Offer To Our Clients</h4>
+          </div>
+        </div>
+
+        <!-- First Row -->
+        <div class="row align-items-center">
+          <div class="col-lg-6 col-md-12 text-center text-lg-start">
+            <img
+              src="/assets/images/mision-vision.png"
+              alt="Our Mission"
+              class="img-fluid mission-img"
+            />
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <p class="intro-text">
+              At Wealthy Living Healthcare, we specialized in delivering
+              compassionate and comprehensive home health services, icluding
+              Home Health Aids, Home Rehabilitation, Medical Social Work, IV
+              Infusion Therapy and Primary Home Care. <br />
+              Our dedicated team provides personalized support, therapy and
+              education. Empowering individuals to recover, thrive and maintain
+              their indipendence in the comfort of their own homes.
+            </p>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="mission-box text-start">
+                  <h3>Our Mission</h3>
+                  <p>
+                    Empowering individuals to achieve optimal health,
+                    independence, and quality of life through compassionate,
+                    personalized, and comprehensive home healthcare services.
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="vision-box text-start">
+                  <h3>Our Vision</h3>
+                  <p>
+                    To be the leading provider of home healthcare services,
+                    delivering exceptional care, support, and education that
+                    exceeds our clients' expectations and fosters a culture of
+                    trust, dignity, and respect.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Second Row -->
+        <div class="row align-items-center mt-5">
+          <div class="col-lg-6 col-md-12 order-2 order-lg-1 story">
+            <h3 class="story-title">Our Story</h3>
+            <p>
+              Transforming lives through exceptional care, with a 98% success
+              rate in delivering personalized home healthcare services that
+              empower individuals to recover, thrive, and maintain their
+              independence.
+            </p>
+            <h3 class="history-title">Our History</h3>
+            <p>
+              Founded on the principles of compassion, dignity, and respect, our
+              organization has been dedicated to delivering comprehensive home
+              healthcare services for over a decade, providing personalized
+              support, therapy, and education to individuals in the comfort of
+              their own homes.
+            </p>
+          </div>
+          <div class="col-lg-6 col-md-12 order-1 order-lg-2 text-center">
+            <img
+              src="/assets/images/story.png"
+              alt="Our History"
+              class="img-fluid history-img"
+            />
           </div>
         </div>
       </div>
