--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
           <div class="col-lg-4 d-flex align-items-center">
             <div class="line"></div>
             <i class="fas fa-arrow-right"></i>
-            <h2 class="mt-2">What We Do</h2>
+            <h2 class="mt-2">healthy Pick</h2>
           </div>
           <div class="col-lg-8 text-center text-lg-start mt-2">
-            <h1>Our Services</h1>
-            <h4>What We Offer To Our Clients</h4>
+            <h1>Why Choose us?</h1>
+            <h4>We are your best pick for your health</h4>
           </div>
         </div>
 
@@ -543,6 +543,67 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer Section---- -->
+    <footer class="footer-section">
+      <div class="container">
+        <!-- Logo -->
+        <div class="row">
+          <div class="col-12">
+            <img
+              src="/assets/images/wealthy health care logo.png"
+              alt="Wealth Living Healthcare"
+              class="footer-logo"
+            />
+          </div>
+        </div>
+
+        <!-- First Section: About Content -->
+        <div class="row">
+          <div class="col-md-12">
+            <p class="footer-about">
+              Wealth Living Healthcare is committed to providing top-tier
+              medical services, ensuring the best patient care with a blend of
+              innovation and compassion.
+            </p>
+          </div>
+        </div>
+
+        <!-- Second Section: Email & Phone -->
+        <div class="row contact-info">
+          <div class="col-md-6">
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:info@wealthliving.com" class="text-white">info@wealthliving.com</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="contact-item ">
+              <i class="fas fa-phone-alt"></i>
+              <a href="tel:+1234567890" class="text-white">+1 234 567 890</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Third Section: Address & Social Media -->
+        <div class="row">
+          <div class="col-md-6">
+            <div class="address">
+              <i class="fas fa-map-marker-alt"></i>
+              <p>123 Health Street, Wellness City, USA</p>
+            </div>
+          </div>
+          <div class="col-md-6 text-md-end text-center">
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
