--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
         <!-- Second Section: Email & Phone -->
         <div class="row contact-info">
-          <div class="col-md-6">
+          <div class="col-md-12 mb-3">
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
               <a href="mailto:info@wealthliving.com" class="text-white">info@wealthliving.com</a>
@@ -587,8 +587,8 @@
 
         <!-- Third Section: Address & Social Media -->
         <div class="row">
-          <div class="col-md-6">
-            <div class="address">
+          <div class="col-md-6 text-start">
+            <div class="address ">
               <i class="fas fa-map-marker-alt"></i>
               <p>123 Health Street, Wellness City, USA</p>
             </div>
