intro text adjusted on mobile view

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             />
           </div>
           <div class="col-lg-6 col-md-12">
-            <p class="intro-text">
+            <p class="intro-text my-4">
               At Wealthy Living Healthcare, we specialized in delivering
               compassionate and comprehensive home health services, icluding
               Home Health Aids, Home Rehabilitation, Medical Social Work, IV
