services page done

--- a/pages/services.html
+++ b/pages/services.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Wealthy Living - Premium Healthcare services with expert care. Book an appointment today!"
+      content="Explore our top-tier healthcare services designed to provide you with expert care and personalized treatment."
     />
-    <title>WEALTHY LIVING | HOME</title>
+    <title>WEALTHY LIVING | SERVICES</title>
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -46,10 +46,10 @@
       </div>
       <ul class="navlist">
         <li>
-          <a href="index.html" style="--i: 1" class="nav-link active">Home</a>
+          <a href="/index.html" style="--i: 1" class="nav-link">Home</a>
         </li>
         <li>
-          <a href="/pages/services.html" style="--i: 2" class="nav-link"
+          <a href="/pages/services.html" style="--i: 2" class="nav-link active"
             >Service</a
           >
         </li>
@@ -87,28 +87,11 @@
       <div id="menu-icon" class="bx bx-menu"></div>
     </header>
 
-    <!-- Hero Section--------------- -->
-    <section
-      class="home-section d-flex justify-content-center align-items-center"
-      data-aos="fade-down"
-      data-aos-easing="ease-in-sine"
-      data-aos-duration="1000"
-      id="home"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 my-5">
-            <p class="welcome-text">Welcome to</p>
-            <h1><span class="text-orange">Wealthy</span> Living</h1>
-            <h1>Health<span class="text-green">care</span> Service</h1>
-            <p class="description">
-              We provide top-tier healthcare services to ensure your well-being.
-              Our expert team is dedicated to offering exceptional care tailored
-              to your needs.
-            </p>
-            <a href="#" class="btn book-btn">Book Appointment</a>
-          </div>
-        </div>
+    <!-- Service Home Section -->
+    <section class="service-home">
+      <div class="overlay"></div>
+      <div class="container text-center">
+        <h1 class="service-title">Our Healthcare Services</h1>
       </div>
     </section>
 
@@ -124,13 +107,6 @@
 
         <!-- First Row: Image Left, Text Right -->
         <div class="row align-items-center mb-3">
-          <div class="col-lg-5">
-            <img
-              src="/assets/images/nurse talking.png"
-              alt="About Us Image"
-              class="img-fluid know-us"
-            />
-          </div>
           <div class="col-lg-7 mt-3">
             <h3 class="about">About Us</h3>
             <p class="">
@@ -151,25 +127,10 @@
               you every step of the way.
             </p>
           </div>
-        </div>
-
-        <!-- Second Row: Text Left, Image Right -->
-        <div class="row align-items-center flex-column-reverse flex-lg-row">
-          <div class="col-lg-5 mt-3">
-            <p class="">
-              - Your journey to better your health starts here. <br />
-              Let's achieve your wellness goals together!
-            </p>
-            <p class="">
-              - Feel free to reach out to our team if you have any quesions.
-              <br />
-              Thank you for choosing Wealthy Living Healthcare Services!
-            </p>
-          </div>
-          <div class="col-lg-7">
+          <div class="col-lg-5">
             <img
-              src="/assets/images/blacky.png"
-              alt="Our Values Image"
+              src="/assets/images/service-know.png"
+              alt="About Us Image"
               class="img-fluid know-us"
             />
           </div>
@@ -194,7 +155,7 @@
         </div>
 
         <!-- Services Grid -->
-        <div class="row g-4 mt-4">
+        <div class="row g-4 my-4">
           <!-- Service Item 1 -->
           <div class="col-md-6">
             <div class="service-item position-relative">
@@ -266,91 +227,56 @@
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- Learn More Link -->
-        <div class="text-center mt-4">
-          <a href="#" class="learn-more btn">Learn More</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- Our Speciality Section----- -->
-    <section class="speciality-section py-4">
-      <div class="container-fluid">
-        <div class="row no-gutters">
-          <!-- Left Side (Text + Overlay) -->
-          <div class="col-lg-6 speciality-left">
-            <div class="overlay"></div>
-            <div class="content">
-              <div class="speciality-text">
-                <h2>Our Speciality</h2>
+          <!-- Service Item 5 -->
+          <div class="col-md-6">
+            <div class="service-item position-relative">
+              <img
+                src="/assets/images/service5.png"
+                alt="Service 5"
+                class="img-fluid service-img"
+              />
+              <div class="service-card">
+                <h3>Pharmacy Services</h3>
                 <p>
-                  We provide top-quality healthcare services with highly
-                  experienced professionals and state-of-the-art facilities.
+                  Easy access to medications with expert pharmacists for
+                  guidance and support.
                 </p>
-              </div>
-              <div class="row speciality-items">
-                <div class="col-lg-6 col-md-6 col-sm-12 speciality-item">
-                  <div class="icon-circle">
-                    <i class="bx bx-medal"></i>
-                  </div>
-                  <div class="speciality-text">
-                    <h3>High Ratings</h3>
-                    <p>
-                      Our patients trust us with an excellent satisfaction rate.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-12 speciality-item">
-                  <div class="icon-circle">
-                    <i class="fas fa-user-md"></i>
-                  </div>
-                  <div class="speciality-text">
-                    <h3>Professional Staff</h3>
-                    <p>
-                      We have a dedicated team of certified healthcare
-                      professionals.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-12 speciality-item">
-                  <div class="icon-circle">
-                    <i class="fas fa-user-nurse"></i>
-                  </div>
-                  <div class="speciality-text">
-                    <h3>Experienced Doctors</h3>
-                    <p>
-                      Our doctors are highly experienced with years of
-                      expertise.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-12 speciality-item">
-                  <div class="icon-circle">
-                    <i class="fas fa-ambulance"></i>
-                  </div>
-                  <div class="speciality-text">
-                    <h3>Emergency Care</h3>
-                    <p>
-                      24/7 emergency services to handle critical cases
-                      efficiently.
-                    </p>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
 
-          <!-- Right Side (Image) -->
-          <div class="col-lg-6 speciality-right">
-            <img
-              src="/assets/images/special-doctors.png"
-              alt="Healthcare Professionals"
-            />
+          <!-- Service Item 6 -->
+          <div class="col-md-6">
+            <div class="service-item position-relative">
+              <img
+                src="/assets/images/service6.png"
+                alt="Service 6"
+                class="img-fluid service-img"
+              />
+              <div class="service-card">
+                <h3>Home Healthcare</h3>
+                <p>
+                  Professional healthcare services delivered right at your
+                  doorstep for convenience.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Empower Section------ -->
+    <section class="empower-section d-flex align-items-center mb-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h2 class="empower-title">
+              We Empower Our Clients With Transformative, Lasting Oriented
+              Solutions
+            </h2>
+            <a href="#" class="empower-btn btn">Book Now</a>
           </div>
         </div>
       </div>
@@ -453,97 +379,6 @@
       </div>
     </section>
 
-    <!-- Mission and vision Section------- -->
-    <section class="mission-vision-section p-3">
-      <div class="container">
-        <!-- Section Title Row -->
-        <div class="row align-items-center section-header">
-          <div class="col-lg-4 d-flex align-items-center">
-            <div class="line"></div>
-            <i class="fas fa-arrow-right"></i>
-            <h2 class="mt-2">healthy Pick</h2>
-          </div>
-          <div class="col-lg-8 text-center text-lg-start mt-2">
-            <h1>Why Choose us?</h1>
-            <h4>We are your best pick for your health</h4>
-          </div>
-        </div>
-
-        <!-- First Row -->
-        <div class="row align-items-center">
-          <div class="col-lg-6 col-md-12 text-center text-lg-start">
-            <img
-              src="/assets/images/mision-vision.png"
-              alt="Our Mission"
-              class="img-fluid mission-img"
-            />
-          </div>
-          <div class="col-lg-6 col-md-12">
-            <p class="intro-text my-4">
-              At Wealthy Living Healthcare, we specialized in delivering
-              compassionate and comprehensive home health services, icluding
-              Home Health Aids, Home Rehabilitation, Medical Social Work, IV
-              Infusion Therapy and Primary Home Care. <br />
-              Our dedicated team provides personalized support, therapy and
-              education. Empowering individuals to recover, thrive and maintain
-              their indipendence in the comfort of their own homes.
-            </p>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="mission-box text-start">
-                  <h3>Our Mission</h3>
-                  <p>
-                    Empowering individuals to achieve optimal health,
-                    independence, and quality of life through compassionate,
-                    personalized, and comprehensive home healthcare services.
-                  </p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="vision-box text-start">
-                  <h3>Our Vision</h3>
-                  <p>
-                    To be the leading provider of home healthcare services,
-                    delivering exceptional care, support, and education that
-                    exceeds our clients' expectations and fosters a culture of
-                    trust, dignity, and respect.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Second Row -->
-        <div class="row align-items-center mt-5">
-          <div class="col-lg-6 col-md-12 order-2 order-lg-1 story">
-            <h3 class="story-title">Our Story</h3>
-            <p>
-              Transforming lives through exceptional care, with a 98% success
-              rate in delivering personalized home healthcare services that
-              empower individuals to recover, thrive, and maintain their
-              independence.
-            </p>
-            <h3 class="history-title">Our History</h3>
-            <p>
-              Founded on the principles of compassion, dignity, and respect, our
-              organization has been dedicated to delivering comprehensive home
-              healthcare services for over a decade, providing personalized
-              support, therapy, and education to individuals in the comfort of
-              their own homes.
-            </p>
-          </div>
-          <div class="col-lg-6 col-md-12 order-1 order-lg-2 text-center">
-            <img
-              src="/assets/images/story.png"
-              alt="Our History"
-              class="img-fluid history-img"
-            />
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- Footer Section---- -->
     <footer class="footer-section">
       <div class="container">
@@ -608,7 +443,7 @@
     </footer>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
