blogs page done

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           >
         </li>
         <li>
-          <a href="/pages/what.html" style="--i: 3" class="nav-link">Blog</a>
+          <a href="/pages/blogs.html" style="--i: 3" class="nav-link">Blog</a>
         </li>
         <li>
           <a href="/pages/ResearchResource.html" style="--i: 4" class="nav-link"
