read more blogs page done

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -173,7 +173,7 @@
                     <p class="story-details">
                         Discover how virtual healthcare is transforming patient care and accessibility...
                     </p>
-                    <a href="#" class="read-more">Read More</a>
+                    <a href="/pages/readblogs.html" class="read-more">Read More</a>
                 </div>
             </div>
 
@@ -189,7 +189,7 @@
                     <p class="story-details">
                         Learn about the latest trends in preventive medicine and how it can improve longevity...
                     </p>
-                    <a href="#" class="read-more">Read More</a>
+                    <a href="/pages/readblogs.html" class="read-more">Read More</a>
                 </div>
             </div>
 
@@ -205,7 +205,7 @@
                     <p class="story-details">
                         Artificial intelligence is playing a major role in diagnostics and treatment planning...
                     </p>
-                    <a href="#" class="read-more">Read More</a>
+                    <a href="/pages/readblogs.html" class="read-more">Read More</a>
                 </div>
             </div>
 
@@ -221,7 +221,7 @@
                     <p class="story-details">
                         Explore the best fitness and nutrition habits for a long and healthy life...
                     </p>
-                    <a href="#" class="read-more">Read More</a>
+                    <a href="/pages/readblogs.html" class="read-more">Read More</a>
                 </div>
             </div>
         </div>
