--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
           <a href="/pages/blogs.html" style="--i: 3" class="nav-link">Blog</a>
         </li>
         <li>
-          <a href="/pages/ResearchResource.html" style="--i: 4" class="nav-link"
+          <a href="/pages/career.html" style="--i: 4" class="nav-link"
             >Career</a
           >
         </li>
 
         <li>
-          <a href="/pages/ResearchResource.html" style="--i: 5" class="nav-link"
+          <a href="/pages/contact.html" style="--i: 5" class="nav-link"
             >Contact</a
           >
         </li>
