--- a/pages/career.html
+++ b/pages/career.html
@@ -63,7 +63,7 @@
         </li>
 
         <li>
-          <a href="/pages/ResearchResource.html" style="--i: 5" class="nav-link"
+          <a href="/pages/contact.html" style="--i: 5" class="nav-link"
             >Contact</a
           >
         </li>
